fix contact textarea overflow

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -5,6 +5,7 @@
 display:flex;
 flex-direction: column;
 align-items: center;
+overflow: hidden;
 
 
 }
@@ -161,6 +162,14 @@ color: white;
 
 }
 
+
+textarea.effect{
+
+max-width: 100%;
+min-height: 50px;
+max-height: 180px;
+
+}
 
 
 .loader{
